--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "kami-mixer",
   "private": true,
@@ -12,13 +11,14 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "11.11.17",
-    "lucide-react": "0.475.0"
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.475.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
